@@ -8,8 +8,8 @@ dnl empty.
 
 m4_define(pcre_major, [7])
 m4_define(pcre_minor, [2])
-m4_define(pcre_prerelease, [-RC1])
-m4_define(pcre_date, [2007-05-02])
+m4_define(pcre_prerelease, [-RC2])
+m4_define(pcre_date, [2007-05-09])
 
 # Libtool shared library interface versions (current:revision:age)
 m4_define(libpcre_version, [0:1:0])
